# Account-intelligence

./: .gitignore  Dockerfile  Dockerfile.backend  Dockerfile.frontend  README.md  alembic.ini  docker-compose.yml  package-lock.json  pyproject.toml  register_test_user.py  seed_simulation.py
.github/workflows/: azure-static-web-apps-victorious-wave-046b8a60f.yml  deploy_azure.yml
alembic/: env.py
alembic/versions/: 01882a3336ca_llm_rank_added_to_recommendation.py  2c48922387a9_merge_multiple_heads.py  4d433f8c3c93_reaserchdocumet_source_ur_changed_from_.py  558a09b2eb08_fix.py  6ad7c9305fc3_add_industries_table_and_relationships.py  6af8487d82d0_user_updated.py  6b306b3a84d6_previous_migration_fixed.py  8c249e7dcba2_fix_fk_insight.py  a41bd4d0a02e_deleted_productembedding.py  ac9ca885fb92_sales_strategy_models.py  ad5281e43f7c_fix.py  b5694b477e62_updated_sales_strategy.py  b5a22ef3d485_auth_upgraded.py  be0c9ea54ef7_ai_engine_models.py  c1bd5228bb77_revision.py  c53d37d00d13_initial_db.py  cf49f1c3a28f_sales_strategy.py  cf8fdaf33ef1_update.py  d804daae1d6e_fix.py  df5ac36ad638_fixed.py  ebe36c3587b5_product_seeder.py  ed81117bac9f_salesstrategy_2.py
data/raw_pdfs/: README.md
data/simulated/: README.md
docker/: Dockerfile.backend  docker-compose.yml
docs/: arquitectura.md  diccionario_datos.md  user_manual.md
src/backend/: requirements.txt
src/backend/app/: config.py  main.py
src/frontend/: Dockerfile.dev
src/frontend/account-intelligense/: .dockerignore  Dockerfile.dev  Dockerfile.frontend  index.html  package.json  (+2 more)
tests/: __init__.py  test_api.py
(+100 files in other folders)
