[project]
name = "hpe-account-intelligence"
version = "0.1.0"
description = "AI Sales Enabler for HPE"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # --- CORE / API ---
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "pydantic[email]",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.9",
    "httpx>=0.27.0",
    "passlib[argon2]",
    "argon2-cffi",
    "python-jose[cryptography]>=3.3.0",
    # --- Data Base (Postgres STACK) ---
    "sqlalchemy>=2.0.27",
    "alembic>=1.13.1",
    "asyncpg>=0.29,<1.0",
    "psycopg2-binary>=2.9,<3.0",
    # --- AI / LANGCHAIN ---
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-google-genai>=2.0.0",
    "pinecone>=3.0.0",
    "langchain-tavily>=0.2.0",
    "langgraph>=0.2.0",
    "tavily-python>=0.3.0",
    # --- UTILITIES ---
    "annotated-types>=0.6.0",
    "colorama>=0.4.6",
    "celery>=5.3.0,<6.0.0",
    "redis>=5.0.0,<6.0.0"
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "black>=24.0.0",
    "ruff>=0.3.0"
]
